# mediaDownloader

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  cron.sh  entrypoint.sh  media-downloader-cron
.github/workflows/: build.yaml  build_publish.yaml
mediaDownloader/: CHANGELOG.md  Cargo.toml  config_example.toml
mediaDownloader/src/: lib.rs
mediaDownloader/src/bot/: client.rs
mediaDownloader/src/cleaner/: cleaner.rs
mediaDownloader/src/media_downloader/: downloader.rs  errors.rs  formatter.rs  media_downloader.rs  mod.rs  site_validator.rs  video_downloader.rs  video_formatter.rs
mediaDownloader/src/media_downloader/processors/: mod.rs  processor.rs  tiktok.rs
mediaDownloader/src/services/: mod.rs
mediaDownloader/src/services/redis/: backend.rs  mod.rs
mediaDownloader/src/services/tracing/: mod.rs  telemetry.rs
