[package]
name = "mediadownloader"
version = "1.1.0"
edition = "2021"

[[bin]]
name = "media_downloader"
path = "src/media_downloader/media_downloader.rs"

[[bin]]
name = "cleaner"
path = "src/cleaner/cleaner.rs"

[[bin]]
name = "bot"
path = "src/bot/client.rs"

[dependencies]
tokio = { version = "1.26", features = ["full", "tracing"] }
futures = "0.3.25"
serde = { version = "1.0.157", features = ["derive"] }
serde_json = "1.0.108"
toml = "0.8.8"
url = "2.3.1"
redis = { version = "0.24.0", features = [
    "tokio-rustls-comp",
    "connection-manager",
] }
lazy_static = "1.4.0"
frankenstein = { version = "0.29.2", default-features = false, features = [
    "async-http-client",
] }
tracing = { version = "0.1.40", features = ["attributes"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
deadpool-redis = { version = "0.14.0", features = ["rt_tokio_1"] }
async_once = "0.2.6"
opentelemetry = { version = "0.20.0", default-features = false, features = [
    "trace",
    "metrics",
    "rt-tokio",
] }
opentelemetry-otlp = { version = "0.13.0", features = [
    "http-proto",
    "reqwest-client",
    "reqwest-rustls",
] }
tracing-bunyan-formatter = "0.3.9"
tracing-opentelemetry = "0.21.0"
opentelemetry-semantic-conventions = "0.12.0"
reqwest = { version = "0.11.22", features = ["json"] }
async-trait = "0.1.74"
scraper = "0.18.1"
regex = "1.10.2"
openssl = { version = "0.10.63", features = ["vendored"] }
