[package]
name = "mediadownloader"
version = "2.0.0"
edition = "2021"

[[bin]]
name = "media_downloader"
path = "src/media_downloader/media_downloader.rs"

[[bin]]
name = "cleaner"
path = "src/cleaner/cleaner.rs"

[[bin]]
name = "bot"
path = "src/bot/client.rs"
test = false

[dependencies]
redis = { version = "0.24.0", features = [
    "tokio-rustls-comp",
    "connection-manager",
] }
crossbeam = "0.8.4"
tokio = { version = "1.37", features = ["full", "tracing"] }
futures = "0.3.30"
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"
toml = "0.8.12"
url = "2.5.0"
lazy_static = "1.4.0"
frankenstein = { version = "0.29.2", default-features = false, features = [
    "async-http-client",
] }
tracing = { version = "0.1.40", features = ["attributes"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
deadpool-redis = { version = "0.14.0", features = ["rt_tokio_1"] }
async_once = "0.2.6"
opentelemetry = { version = "0.20.0", default-features = false, features = [
    "trace",
    "metrics",
    "rt-tokio",
] }
opentelemetry-otlp = { version = "0.13.0", features = [
    "http-proto",
    "reqwest-client",
    "reqwest-rustls",
] }
tracing-bunyan-formatter = "0.3.9"
tracing-opentelemetry = "0.21.0"
opentelemetry-semantic-conventions = "0.14.0"
reqwest = { version = "0.11.22", features = ["json", "cookies"] }
async-trait = "0.1.80"
scraper = "0.19.0"
regex = "1.10.4"
tryhard = "0.5.1"
rand = "0.8.5"
uuid = { version = "1.8.0", features = ["v4"] }
cookie = "0.18.1"

[target.'cfg(target_os = "linux")'.dependencies]
openssl = { version = "0.10.64", features = ["vendored"] }
